--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,13 +3,34 @@
 
 <%#  Part 2: Start here... %>
 
+<%= form_tag movies_path, method: :get, id: 'ratings_form' do %>
+  Include:
+  <% @all_ratings.each do |rating| %>
+    <div class="form-check  form-check-inline">
+      <%= label_tag "ratings[#{rating}]", rating, class: 'form-check-label' %>
+      <%= check_box_tag "ratings[#{rating}]", "1",  @ratings_to_show.include?(rating), class: 'form-check-input' %>
+    </div>
+  <% end %>
+  <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
+<% end %>
+
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
-      <th>Rating</th>
-      <th>Release Date</th>
-      <th>More Info</th>
+      <th>
+        Movie
+        <%th= link_to "Movie" , movie_path(sort: "title", id: "title_header") %>
+      </th>
+      <th>
+       Rating
+      </th>
+      <th>
+        Release Date
+        <%th= link_to "Movie" , movie_path(sort: " Release_Date", id: "Release_Date") %>
+      </th>
+      <th>
+        More Info
+      </th>
     </tr>
   </thead>
   <tbody>
