--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,15 +18,13 @@
   <thead>
     <tr>
       <th>
-        Movie
-        <%th= link_to "Movie" , movie_path(sort: "title", id: "title_header") %>
+        <%= link_to "Movie Title" , movies_path(sort: "title" , ratings: @ratings), id: "title_header" %>
       </th>
       <th>
        Rating
       </th>
       <th>
-        Release Date
-        <%th= link_to "Movie" , movie_path(sort: " Release_Date", id: "Release_Date") %>
+        <%= link_to "Release Date" , movies_path(sort: " Release_Date",  ratings: @ratings), id: "release_date_header" %>
       </th>
       <th>
         More Info
