--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,7 +17,7 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>
+      <th class="<&='hilite' if @sort== 'title    %>">
         <%= link_to "Movie Title" , movies_path(sort: "title" , ratings: @ratings), id: "title_header" %>
       </th>
       <th>
